--- a/developers/required-environments.mdx
+++ b/developers/required-environments.mdx
@@ -1,16 +1,7 @@
 ---
-layout:
-  title:
-    visible: true
-  description:
-    visible: false
-  tableOfContents:
-    visible: true
-  outline:
-    visible: true
-  pagination:
-    visible: true
+title: "Required Environments"
 ---
+
 
 # Set Up the Development Environment
 
@@ -21,8 +12,11 @@ Before writing code, the first step is to set up your development environment. P
 This guide covers the installation of the following tools:
 
 * **Rust**: The main language for Solana programs.
+
 * **Solana CLI**: Required to build, test, and deploy programs.
+
 * **Anchor CLI (Recommended)**: Simplifies Solana program development.
+
 * **Node.js and Yarn:** Required to run the node project.
 
 If you already have these tools installed, skip to the **SOON RPC configuration** section.
