Documentation edits made through Mintlify web editor

--- a/developers/required-environments.mdx
+++ b/developers/required-environments.mdx
@@ -1,10 +1,8 @@
 ---
-title: "Required Environments"
-sidebarTitle: "Short title"
+title: "Set Up the Development Environment"
+sidebarTitle: "Required Environments"
 mode: "wide"
 ---
-
-# Set Up the Development Environment
 
 Before writing code, the first step is to set up your development environment. Proper configuration ensures that all necessary tools and dependencies are in place, allowing you to build and deploy programs efficiently.
 
