Documentation edits made through Mintlify web editor

--- a/developers/required-environments.mdx
+++ b/developers/required-environments.mdx
@@ -19,3 +19,10 @@ This guide covers the installation of the following tools:
 * **Node.js and Yarn:** Required to run the node project.
 
 If you already have these tools installed, skip to the **SOON RPC configuration** section.
+
+### For Different Operation Systems
+
+If you're using **Windows**, you'll need to install **Windows Subsystem for Linux (WSL)** to run Linux-based tools.
+
+* **Windows Users**: Please set up WSL before proceeding.
+* **Linux & macOS Users**: You can start directly with the next steps.
