Documentation edits made through Mintlify web editor

--- a/developers/install-rust.mdx
+++ b/developers/install-rust.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Set Up the Development Environment"
-sidebarTitle: "Required Environments"
-mode: "wide"
+title: "Install Rust"
+sidebarTitle: "Install Rust"
 ---
 
 ## Install Rust
