Documentation edits made through Mintlify web editor

--- a/developers/install-rust.mdx
+++ b/developers/install-rust.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Install Rust"
 sidebarTitle: "Install Rust"
+mode: "wide"
 ---
-
-## Install Rust
 
 Solana programs are primarily written in the **Rust.** This guide will focus on setting up Rust.
 
