--- a/developers/get-test-token-via-soon-faucet.mdx
+++ b/developers/get-test-token-via-soon-faucet.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Set Up the Development Environment"
-sidebarTitle: "Required Environments"
+title: "Get The Test Token via SOON Faucet Devnet"
+sidebarTitle: "Get Test Token"
 mode: "wide"
 ---
+
 SOON Faucet Devnet can help developers directly receive sol for testing without the need for bridge assets.
 
 ## Get Your Airdrop $SOL through CLI
@@ -28,4 +29,5 @@ solana airdrop 1 AEG18Z4ESnzEh1rcgUHk1dLwVY4LyfZ6TWzgShGry5UN --url https://rpc.
 ```
 
 * Please replace the address in the command with your own address before using it.
+
 * The user could get 10 SOL at max every 10 hours per Address and per IP.
