Documentation edits made through Mintlify web editor

--- a/developers/deploy-smart-contracts.mdx
+++ b/developers/deploy-smart-contracts.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Set Up the Development Environment"
-sidebarTitle: "Required Environments"
+title: "Deploy Smart Contracts"
+sidebarTitle: "Deploy Smart Contracts"
 mode: "wide"
 ---
