--- a/developers/sqd.mdx
+++ b/developers/sqd.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Set Up the Development Environment"
-sidebarTitle: "Required Environments"
+title: "SQD"
+sidebarTitle: "SQD"
 mode: "wide"
 ---
