Documentation edits made through Mintlify web editor

--- a/developers/rpc-interface.mdx
+++ b/developers/rpc-interface.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Set Up the Development Environment"
-sidebarTitle: "Required Environments"
+title: "RPC Interface"
+sidebarTitle: "RPC Interface"
 mode: "wide"
 ---
