Documentation edits made through Mintlify web editor

--- a/developers/wallet.mdx
+++ b/developers/wallet.mdx
@@ -1,5 +1,4 @@
 ---
-title: "Set Up the Development Environment"
-sidebarTitle: "Required Environments"
-mode: "wide"
+title: "Wallet Guide"
+sidebarTitle: "Wallet"
 ---
