Documentation edits made through Mintlify web editor

--- a/introduction/what-is-soon.mdx
+++ b/introduction/what-is-soon.mdx
@@ -2,3 +2,17 @@
 title: "What is SOON?"
 sidebarTitle: "What is SOON"
 ---
+
+[SOON ](https://x.com/soon_svm)is the most efficient rollup stack delivering top performance to every L1, powered by Decoupled SVM.
+
+**SOON Mainnet**
+
+SOON Mainnet is the name of the SOON Chain that will be deployed on top of Ethereum L1. The SOON Mainnet will be operated by the SOON team.
+
+**SOON Stack**
+
+SOON Stack is the collection of components that allows for the deployment and running of an SVM Layer 2 on top of any base Layer 1. Chains deployed using the SOON Stack are referred to as SOON Chains.
+
+#### Decoupled SVM
+
+Decoupled SVM refers to the separation of the Solana Virtual Machine (SVM) from Solana's native consensus layer, turning the SVM into an independent execution layer. This allows SVM to be deployed across different Layer 1 ecosystems, providing enhanced performance and security for rollup architectures.
