Documentation edits made through Mintlify web editor

--- a/developers/soon-rpc-configuration.mdx
+++ b/developers/soon-rpc-configuration.mdx
@@ -1,7 +1,9 @@
 ---
 title: "SOON RPC Configuration "
 sidebarTitle: "SOON RPC Configuration "
-mode: "wide"
+
+mode: "custom"
+
 ---
 
 Now that you've set up your development environment, it's time to configure the **RPC** endpoint. This is crucial because it allows your development environment to interact with a specific Solana cluster. In this case, you will be connecting to the **SOON Testnet** rather than the Solana local cluster or default Solana Testnet.&#x20;
